added starter styling for hero section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         
     </header>
     <section class="hero-section">
-
+        <div class="hero-text-container">
+            <h1 class="hero-header">Bring Nature Home</h1>
+            <p class="hero-text">Discover a wide variety of indoor and outdoor plants that breathe life into your space. Whether you're a seasoned gardener or just starting, we have everything you need to create your own green oasis.</p>
+            <button class="hero-button">Shop plants</button>
+        </div>
+        <div class="hero-image-container">
+            <img class="hero-img" src="images/1920-ai-generated-three-potted-plants-on-shelf-against-colorful-wall.jpeg" alt="">
+        </div>
     </section>
 </body>
 </html>
